snackbar in manifest snack bar con material3 è cambiato

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_colonne">Colonne</string>
     <string name="title_activity_righe">Righe</string>
     <string name="title_activity_boxes">Boxes</string>
+    <string name="title_activity_bottoni">Bottoni</string>
+    <string name="title_activity_snack_bar_compose">SnackBarCompose</string>
 </resources>
