--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_recycler_view_compose">RecyclerViewCompose</string>
     <string name="title_activity_info">InfoActivity</string>
     <string name="title_activity_compose_state_demo">ComposeStateDemo</string>
+    <string name="title_activity_compose_state_less_demo">ComposeStateLessDemo</string>
 </resources>
