--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="title_activity_info">InfoActivity</string>
     <string name="title_activity_compose_state_demo">ComposeStateDemo</string>
     <string name="title_activity_compose_state_less_demo">ComposeStateLessDemo</string>
+    <string name="title_activity_compose_state_view_model">ComposeStateViewModel</string>
+    <string name="title_activity_flow_demo1">FlowDemo1</string>
 </resources>
