cooroutine flow viewmodel
in questo esempio abbiamo adattato la cooroutine flow a compose servendoci di una classe:ViewModel per poter conservare lo stato della cooroutine durante la ricreazione della activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_compose_state_less_demo">ComposeStateLessDemo</string>
     <string name="title_activity_compose_state_view_model">ComposeStateViewModel</string>
     <string name="title_activity_flow_demo1">FlowDemo1</string>
+    <string name="title_activity_flow_demo_view_model">FlowDemoViewModel</string>
 </resources>
