cooroutine flow produttore consumatore
in questo esempio abbiamo adattato la cooroutine per far si che il produttore aspetti fino a che il consumatore non abbia finito di elaborare i dati ricevuti. Sostituendo la funzione myFlow1.collect { con la funzione
myFlow1.buffer()collect {,noi non facciamo aspettare il produttore,immagazziniamo tutti i suoi dati in un buffer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="title_activity_compose_state_view_model">ComposeStateViewModel</string>
     <string name="title_activity_flow_demo1">FlowDemo1</string>
     <string name="title_activity_flow_demo_view_model">FlowDemoViewModel</string>
+    <string name="title_activity_flow_demo_cooroutine_pressure">FlowDemoCooroutinePressure</string>
 </resources>
