cooroutine flow con operatori
in questo esempio abbiamo aggiunto alla coouroutine Flow (usata come produttore-consumatore),degli operatori .filter e .map.
filter filtra i dati arrivati prima che il consumatore li elebori,map invece trasforma con una funzione il dato arrivato (it) in una stringa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_flow_demo1">FlowDemo1</string>
     <string name="title_activity_flow_demo_view_model">FlowDemoViewModel</string>
     <string name="title_activity_flow_demo_cooroutine_pressure">FlowDemoCooroutinePressure</string>
+    <string name="title_activity_flow_demo_operator">FlowDemoOperator</string>
 </resources>
